Fixed TOC overflow and added APUE chapter 9

--- a/site/custom.css
+++ b/site/custom.css
@@ -25,3 +25,16 @@ pre, .bs-sidebar {
 .navbar-brand {
   font-weight: 400;
 }
+
+ul.bs-sidenav li.main {
+  font-size: 16px;
+}
+
+ul.bs-sidenav li:not(.main) {
+  margin-left: 1em;
+}
+
+.bs-sidebar {
+  overflow-y: auto;
+  max-height: 100%;
+}
